--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -1,165 +1,399 @@
-### **倒立摆动力学建模**
+一阶倒立摆动力学建模
+物理模型假设
+​小车质量：M
+​摆杆质量：m，长度 l，转动惯量 I= 
+3
+1
+​
+ ml 
+2
+ 
+​摆杆角度：θ（垂直向上为 0，顺时针为正）
+​小车位置：x
+​外力：F 作用于小车
+​摩擦系数：b（小车与地面摩擦）
+./images/carpole_model.png
+模型方向说明：小车位移向右为正，摆杆角度逆时针为正。建议建模时小车位移正方向与角度正方向相反。
 
-#### **物理模型假设**
+状态方程推导
+方向 1：逆时针角度为正
+通过牛顿-欧拉法或拉格朗日方程推导非线性微分方程：
 
-- 小车质量 $$M$$
-- 摆杆质量 $$m$$，长度$$l$$，转动惯量 $$I=\frac13ml^2$$
-- 摆杆角度 $$θ$$（垂直向上为0，顺时针为正）
-- 小车位置 $$x$$
-- 外力 $$F$$ 作用于小车
-- b为小车的地面摩擦系数
+{ 
+(M+m) 
+x
+¨
+ −ml 
+θ
+¨
+ cosθ+ml 
+θ
+˙
+  
+2
+ sinθ=F−b 
+x
+˙
+ 
+(I+ml 
+2
+ ) 
+θ
+¨
+ −ml 
+x
+¨
+ cosθ−mglsinθ=0
+​
+ 
+角加速度
+θ
+¨
+ = 
+(M+m)(I+ml 
+2
+ )−m 
+2
+ l 
+2
+ cosθ 
+2
+ 
+−mlcosθb 
+x
+˙
+ −m 
+2
+ l 
+2
+ sinθcosθ 
+θ
+˙
+  
+2
+ +mlcosθF+(M+m)mglsinθ
+​
+ 
+加速度
+x
+¨
+ = 
+(M+m)(I+ml 
+2
+ )−m 
+2
+ l 
+2
+ cosθ 
+2
+ 
+−(I+ml 
+2
+ )b 
+x
+˙
+ −ml(I+ml 
+2
+ )sinθ 
+θ
+˙
+  
+2
+ +(I+ml 
+2
+ )F+m 
+2
+ l 
+2
+ gcosθsinθ
+​
+ 
+方向 2：顺时针角度为正
+非线性微分方程：
 
-![carpole_model](E:\ControlSimLab\Simple_Pendulum\carpole_model.png)
+{ 
+(M+m) 
+x
+¨
+ +ml 
+θ
+¨
+ cosθ−ml 
+θ
+˙
+  
+2
+ sinθ=F−b 
+x
+˙
+ 
+(I+ml 
+2
+ ) 
+θ
+¨
+ +ml 
+x
+¨
+ cosθ−mglsinθ=0
+​
+ 
+角加速度
+θ
+¨
+ = 
+(M+m)(I+ml 
+2
+ )−m 
+2
+ l 
+2
+ cosθ 
+2
+ 
+mlcosθb 
+x
+˙
+ +m 
+2
+ l 
+2
+ sinθcosθ 
+θ
+˙
+  
+2
+ −mlcosθF+(M+m)mglsinθ
+​
+ 
+加速度
+x
+¨
+ = 
+(M+m)(I+ml 
+2
+ )−m 
+2
+ l 
+2
+ cosθ 
+2
+ 
+−(I+ml 
+2
+ )b 
+x
+˙
+ +ml(I+ml 
+2
+ )sinθ 
+θ
+˙
+  
+2
+ +(I+ml 
+2
+ )F−m 
+2
+ l 
+2
+ gcosθsinθ
+​
+ 
+线性化模型（LQR 控制）
+在平衡点 θ 
+b
+​
+ ≈0 附近线性化，取 sinθ≈θ、cosθ≈1，状态向量为：
 
-小车位移**向右**为**正**，角度**逆时针**为**正**。方向与初始建模时的定义有关，建议建模时小车**位移正方向**与**角度正方向**相**反**。
+x= 
+​
+  
+x
+x
+˙
+ 
+θ
+θ
+˙
+ 
+​
+  
+​
+ 
+方向 1：逆时针角度为正
+系统矩阵 A 和输入矩阵 B：
 
-#### **状态方程推导**
+A= 
+​
+  
+0
+0
+0
+0
+​
+  
+1
+D
+−(I+ml 
+2
+ )b
+​
+ 
+0
+D
+−mlb
+​
+ 
+​
+  
+0
+D
+m 
+2
+ l 
+2
+ g
+​
+ 
+0
+D
+(M+m)mgl
+​
+ 
+​
+  
+0
+0
+1
+0
+​
+  
+​
+ ,B= 
+​
+  
+0
+D
+I+ml 
+2
+ 
+​
+ 
+0
+D
+ml
+​
+ 
+​
+  
+​
+ 
+其中 D=(M+m)(I+ml 
+2
+ )−m 
+2
+ l 
+2
+ ，状态空间方程为：
 
-通过牛顿-欧拉法或拉格朗日方程可得非线性微分方程：
-$$
-\begin{aligned}
-(M+m) \ddot{x}-m l \ddot{\theta} \cos \theta+m l \dot{\theta}^{2} \sin \theta & =F -b\dot x\\
-\left(I+m l^{2}\right) \ddot{\theta}-m l \ddot{x} \cos \theta-m g l \sin \theta & =0
-\end{aligned}
-$$
-角加速度为：
-$$
-\ddot{\theta}=\frac{-m l \cos \theta b \dot{x}-m^{2} l^{2} \sin \theta \cos \theta \dot{\theta}^{2}+m l \cos \theta F+(M+m) m g l \sin \theta}{(M+m)\left(I+m l^{2}\right)-m^{2} l^{2} \cos \theta^{2}}
-$$
-加速度为：
-$$
-\ddot{x}=\frac{-\left(I+m l^{2}\right) b \dot{x}-ml\left(I+m l^{2}\right) \sin \theta \dot{\theta}^{2}+\left(I+m l^{2}\right) F+m^{2} l^{2} g \cos \theta \sin \theta}{(M+m)\left(I+m l^{2}\right)-m^{2} l^{2} \cos \theta^{2}}
-$$
+x
+˙
+ =Ax+BF
+方向 2：顺时针角度为正
+系统矩阵 A 和输入矩阵 B：
 
-#### **线性化模型（用于LQR）**
+A= 
+​
+  
+0
+0
+0
+0
+​
+  
+1
+D
+−(I+ml 
+2
+ )b
+​
+ 
+0
+D
+mlb
+​
+ 
+​
+  
+0
+D
+−m 
+2
+ l 
+2
+ g
+​
+ 
+0
+D
+(M+m)mgl
+​
+ 
+​
+  
+0
+0
+1
+0
+​
+  
+​
+ ,B= 
+​
+  
+0
+D
+I+ml 
+2
+ 
+​
+ 
+0
+D
+−ml
+​
+ 
+​
+  
+​
+ 
+LQR 位置跟踪
+若需小车停在设定位置 x 
+ref
+​
+ ，修改状态向量为：
 
-在平衡点 $$θ_b≈0$$附近线性化，有$$sin(\theta_b)=\theta_b$$，$$cos(\theta_b)=1$$，取状态向量为$$\vec x=[x,\dot x,\theta,\dot \theta]$$，可得系统矩阵$$A$$和控制矩阵$$B$$为：
-$$
-A=
-\begin{bmatrix}
-0 & 1 & 0 & 0 \\
-0 & \frac{-(I+ml^2)b}{D} & \frac{m^2l^2g}{D} & 0 \\
-0 & 0 & 0 & 1 \\
-0 & \frac{-mlb}{D} & \frac{(M+m)mgl}{D} & 0
-\end{bmatrix}
-,B=
-\begin{bmatrix}
-0 \\
-\frac{I+ml^2}{D} \\
-0 \\
-\frac{ml}{D}
-\end{bmatrix}
-$$
-其中，$$D=(M+m)(I+ml^2)-m^2l^2$$，由此可得系统的状态空间方程：
-$$
-\begin{bmatrix}
-\dot{x} \\
-\ddot{x} \\
-\dot{\theta} \\
-\ddot{\theta}
-\end{bmatrix}
-=
-\begin{bmatrix}
-0 & 1 & 0 & 0 \\
-0 & \frac{-(I+ml^2)b}{D} & \frac{m^2l^2g}{D} & 0 \\
-0 & 0 & 0 & 1 \\
-0 & \frac{-mlb}{D} & \frac{(M+m)mgl}{D} & 0
-\end{bmatrix}
-\begin{bmatrix}
-{x} \\
-\dot{x} \\
-\theta \\
-\dot{\theta}
-\end{bmatrix}
-+
-\begin{bmatrix}
-0 \\
-\frac{I+ml^2}{D} \\
-0 \\
-\frac{ml}{D}
-\end{bmatrix}
-F
-$$
-LQR控制默认使系统稳定在平衡点，即x=0。若想让小车停在设定位置，可将状态变量修改为：
-$$
-\begin{bmatrix}
-{x}-x_{ref} \\
-\dot{x} \\
-\theta \\
-\dot{\theta}
-\end{bmatrix}
-$$
-在代码中实现为：
+x= 
+​
+  
+x−x 
+ref
+​
+ 
+x
+˙
+ 
+θ
+θ
+˙
+ 
+​
+  
+​
+ 
+代码实现：
 
-```cpp
-double x_ref = 1.0; // 设定目标位置
+cpp
+double x_ref = 1.0; // 目标位置
 x << state[0] - x_ref, state[1], state[2], state[3];
-```
-
-#### 以下是以角度顺时针和小车位移向右为正方向的模型
-
-通过牛顿-欧拉法或拉格朗日方程可得非线性微分方程：
-$$
-\begin{aligned}
-(M+m) \ddot{x}+m l \ddot{\theta} \cos \theta-m l \dot{\theta}^{2} \sin \theta & =F -b\dot x\\
-\left(I+m l^{2}\right) \ddot{\theta}+m l \ddot{x} \cos \theta-m g l \sin \theta & =0
-\end{aligned}
-$$
-
-角加速度为：
-$$
-\ddot{\theta}=\frac{m l \cos \theta b \dot{x}+m^{2} l^{2} \sin \theta \cos \theta \dot{\theta}^{2}-m l \cos \theta F+(M+m) m g l \sin \theta}{(M+m)\left(I+m l^{2}\right)-m^{2} l^{2} \cos \theta^{2}}
-$$
-加速度为：
-$$
-\ddot{x}=\frac{-\left(I+m l^{2}\right) b \dot{x}+ml\left(I+m l^{2}\right) \sin \theta \dot{\theta}^{2}+\left(I+m l^{2}\right) F-m^{2} l^{2} g \cos \theta \sin \theta}{(M+m)\left(I+m l^{2}\right)-m^{2} l^{2} \cos \theta^{2}}
-$$
-#### **线性化模型（用于LQR）**
-
-在平衡点 $$θ_b≈0$$附近线性化，有$$sin(\theta_d)=\theta_d$$，$$cos(\theta_d)=1$$，取状态向量为$$\vec x=[x,\dot x,\theta,\dot \theta]$$，可得系统矩阵$$A$$和控制矩阵$$B$$为：
-$$
-A=
-\begin{bmatrix}
-0 & 1 & 0 & 0 \\
-0 & \frac{-(I+ml^2)b}{D} & \frac{-m^2l^2g}{D} & 0 \\
-0 & 0 & 0 & 1 \\
-0 & \frac{mlb}{D} & \frac{(M+m)mgl}{D} & 0
-\end{bmatrix}
-,B=
-\begin{bmatrix}
-0 \\
-\frac{I+ml^2}{D} \\
-0 \\
-\frac{-ml}{D}
-\end{bmatrix}
-$$
-其中，$$D=(M+m)(I+ml^2)-m^2l^2$$，由此可得系统的状态空间方程：
-$$
-\begin{bmatrix}
-\dot{x} \\
-\ddot{x} \\
-\dot{\theta} \\
-\ddot{\theta}
-\end{bmatrix}
-=
-\begin{bmatrix}
-0 & 1 & 0 & 0 \\
-0 & \frac{-(I+ml^2)b}{D} & \frac{-m^2l^2g}{D} & 0 \\
-0 & 0 & 0 & 1 \\
-0 & \frac{mlb}{D} & \frac{(M+m)mgl}{D} & 0
-\end{bmatrix}
-\begin{bmatrix}
-{x} \\
-\dot{x} \\
-\theta \\
-\dot{\theta}
-\end{bmatrix}
-+
-\begin{bmatrix}
-0 \\
-\frac{I+ml^2}{D} \\
-0 \\
-\frac{-ml}{D}
-\end{bmatrix}
-F
-$$
