--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -1,399 +1,41 @@
-一阶倒立摆动力学建模
-物理模型假设
-​小车质量：M
-​摆杆质量：m，长度 l，转动惯量 I= 
-3
-1
-​
- ml 
-2
- 
-​摆杆角度：θ（垂直向上为 0，顺时针为正）
-​小车位置：x
-​外力：F 作用于小车
-​摩擦系数：b（小车与地面摩擦）
-./images/carpole_model.png
-模型方向说明：小车位移向右为正，摆杆角度逆时针为正。建议建模时小车位移正方向与角度正方向相反。
+# 一阶倒立摆动力学建模文档
 
-状态方程推导
-方向 1：逆时针角度为正
-通过牛顿-欧拉法或拉格朗日方程推导非线性微分方程：
+## 模型示意图
+![carpole_model](./images/carpole_model.png)  
+*注：请将图片文件放在项目根目录的`images/`文件夹中*
 
-{ 
-(M+m) 
-x
-¨
- −ml 
-θ
-¨
- cosθ+ml 
-θ
-˙
-  
-2
- sinθ=F−b 
-x
-˙
- 
-(I+ml 
-2
- ) 
-θ
-¨
- −ml 
-x
-¨
- cosθ−mglsinθ=0
-​
- 
-角加速度
-θ
-¨
- = 
-(M+m)(I+ml 
-2
- )−m 
-2
- l 
-2
- cosθ 
-2
- 
-−mlcosθb 
-x
-˙
- −m 
-2
- l 
-2
- sinθcosθ 
-θ
-˙
-  
-2
- +mlcosθF+(M+m)mglsinθ
-​
- 
-加速度
-x
-¨
- = 
-(M+m)(I+ml 
-2
- )−m 
-2
- l 
-2
- cosθ 
-2
- 
-−(I+ml 
-2
- )b 
-x
-˙
- −ml(I+ml 
-2
- )sinθ 
-θ
-˙
-  
-2
- +(I+ml 
-2
- )F+m 
-2
- l 
-2
- gcosθsinθ
-​
- 
-方向 2：顺时针角度为正
-非线性微分方程：
+---
 
-{ 
-(M+m) 
-x
-¨
- +ml 
-θ
-¨
- cosθ−ml 
-θ
-˙
-  
-2
- sinθ=F−b 
-x
-˙
- 
-(I+ml 
-2
- ) 
-θ
-¨
- +ml 
-x
-¨
- cosθ−mglsinθ=0
-​
- 
-角加速度
-θ
-¨
- = 
-(M+m)(I+ml 
-2
- )−m 
-2
- l 
-2
- cosθ 
-2
- 
-mlcosθb 
-x
-˙
- +m 
-2
- l 
-2
- sinθcosθ 
-θ
-˙
-  
-2
- −mlcosθF+(M+m)mglsinθ
-​
- 
-加速度
-x
-¨
- = 
-(M+m)(I+ml 
-2
- )−m 
-2
- l 
-2
- cosθ 
-2
- 
-−(I+ml 
-2
- )b 
-x
-˙
- +ml(I+ml 
-2
- )sinθ 
-θ
-˙
-  
-2
- +(I+ml 
-2
- )F−m 
-2
- l 
-2
- gcosθsinθ
-​
- 
-线性化模型（LQR 控制）
-在平衡点 θ 
-b
-​
- ≈0 附近线性化，取 sinθ≈θ、cosθ≈1，状态向量为：
+## 物理参数定义
+| 参数名称       | 符号表示   | 说明                     |
+|---------------|-----------|-------------------------|
+| 小车质量        | M         |                          |
+| 摆杆质量        | m         | 长度 l，转动惯量 I=1/3ml² |
+| 摆杆角度        | θ         | 逆时针方向为正            |
+| 小车位移        | x         | 向右为正方向              |
+| 外力输入        | F         | 作用于小车的控制力        |
+| 地面摩擦系数    | b         |                          |
 
-x= 
-​
-  
-x
-x
-˙
- 
-θ
-θ
-˙
- 
-​
-  
-​
- 
-方向 1：逆时针角度为正
-系统矩阵 A 和输入矩阵 B：
+---
 
-A= 
-​
-  
-0
-0
-0
-0
-​
-  
-1
-D
-−(I+ml 
-2
- )b
-​
- 
-0
-D
-−mlb
-​
- 
-​
-  
-0
-D
-m 
-2
- l 
-2
- g
-​
- 
-0
-D
-(M+m)mgl
-​
- 
-​
-  
-0
-0
-1
-0
-​
-  
-​
- ,B= 
-​
-  
-0
-D
-I+ml 
-2
- 
-​
- 
-0
-D
-ml
-​
- 
-​
-  
-​
- 
-其中 D=(M+m)(I+ml 
-2
- )−m 
-2
- l 
-2
- ，状态空间方程为：
+## 非线性动力学方程
+### 方向1：逆时针角度为正
+（此处插入角加速度和加速度公式图片链接）
 
-x
-˙
- =Ax+BF
-方向 2：顺时针角度为正
-系统矩阵 A 和输入矩阵 B：
+### 方向2：顺时针角度为正
+（此处插入角加速度和加速度公式图片链接）
 
-A= 
-​
-  
-0
-0
-0
-0
-​
-  
-1
-D
-−(I+ml 
-2
- )b
-​
- 
-0
-D
-mlb
-​
- 
-​
-  
-0
-D
-−m 
-2
- l 
-2
- g
-​
- 
-0
-D
-(M+m)mgl
-​
- 
-​
-  
-0
-0
-1
-0
-​
-  
-​
- ,B= 
-​
-  
-0
-D
-I+ml 
-2
- 
-​
- 
-0
-D
-−ml
-​
- 
-​
-  
-​
- 
-LQR 位置跟踪
-若需小车停在设定位置 x 
-ref
-​
- ，修改状态向量为：
+---
 
-x= 
-​
-  
-x−x 
-ref
-​
- 
-x
-˙
- 
-θ
-θ
-˙
- 
-​
-  
-​
- 
-代码实现：
+## 线性化模型（LQR控制）
+### 状态空间方程
+（此处插入矩阵A和B的公式图片链接）
 
-cpp
-double x_ref = 1.0; // 目标位置
+---
+
+## LQR位置跟踪实现
+通过修改状态向量实现目标位置跟踪：
+```cpp
+// 代码示例：状态向量偏移
+double x_ref = 1.0; // 设定目标位置
 x << state[0] - x_ref, state[1], state[2], state[3];
