--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -20,7 +20,7 @@
 
 ## 非线性动力学方程
 ### 方向1：逆时针角度为正
-//i.upmath.me/svg/%5Cddot%7B%5Ctheta%7D%20%3D%20%5Cfrac%7B-m%20l%20%5Ccos%20%5Ctheta%20b%20%5Cdot%7Bx%7D%20-%20m%5E2%20l%5E2%20%5Csin%20%5Ctheta%20%5Ccos%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E2%20%2B%20m%20l%20%5Ccos%20%5Ctheta%20F%20%2B%20(M%20%2B%20m)%20m%20g%20l%20%5Csin%20%5Ctheta%7D%7B(M%20%2B%20m)%5Cleft(I%20%2B%20m%20l%5E2%5Cright)%20-%20m%5E2%20l%5E2%20%5Ccos%20%5Ctheta%5E2%7D
+![加速度公式](https://i.upmath.me/svg/%5Cddot%7B%5Ctheta%7D%20%3D%20%5Cfrac%7B-m%20l%20%5Ccos%20%5Ctheta%20b%20%5Cdot%7Bx%7D%20-%20m%5E2%20l%5E2%20%5Csin%20%5Ctheta%20%5Ccos%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E2%20%2B%20m%20l%20%5Ccos%20%5Ctheta%20F%20%2B%20(M%20%2B%20m)%20m%20g%20l%20%5Csin%20%5Ctheta%7D%7B(M%20%2B%20m)%5Cleft(I%20%2B%20m%20l%5E2%5Cright)%20-%20m%5E2%20l%5E2%20%5Ccos%20%5Ctheta%5E2%7D)
 
 ### 方向2：顺时针角度为正
 （此处插入角加速度和加速度公式图片链接）
