--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -19,11 +19,13 @@
 ## 非线性动力学方程
 ### 方向1：逆时针角度为正
 通过牛顿-欧拉法或拉格朗日方程推导非线性微分方程：
-(https://i.upmath.me/svg/%5Cbegin%7Baligned%7D%0A(M%2Bm)%20%5Cddot%7Bx%7D-m%20l%20%5Cddot%7B%5Ctheta%7D%20%5Ccos%20%5Ctheta%2Bm%20l%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%20%5Csin%20%5Ctheta%20%26%20%3DF%20-b%5Cdot%20x%5C%5C%0A%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Cddot%7B%5Ctheta%7D-m%20l%20%5Cddot%7Bx%7D%20%5Ccos%20%5Ctheta-m%20g%20l%20%5Csin%20%5Ctheta%20%26%20%3D0%0A%5Cend%7Baligned%7D)
+![数学模型](https://i.upmath.me/svg/%5Cbegin%7Baligned%7D%0A(M%2Bm)%20%5Cddot%7Bx%7D-m%20l%20%5Cddot%7B%5Ctheta%7D%20%5Ccos%20%5Ctheta%2Bm%20l%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%20%5Csin%20%5Ctheta%20%26%20%3DF%20-b%5Cdot%20x%5C%5C%0A%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Cddot%7B%5Ctheta%7D-m%20l%20%5Cddot%7Bx%7D%20%5Ccos%20%5Ctheta-m%20g%20l%20%5Csin%20%5Ctheta%20%26%20%3D0%0A%5Cend%7Baligned%7D)
+
 加速度公式：
 ![加速度公式](https://i.upmath.me/svg/%5Cddot%7B%5Ctheta%7D%20%3D%20%5Cfrac%7B-m%20l%20%5Ccos%20%5Ctheta%20b%20%5Cdot%7Bx%7D%20-%20m%5E2%20l%5E2%20%5Csin%20%5Ctheta%20%5Ccos%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E2%20%2B%20m%20l%20%5Ccos%20%5Ctheta%20F%20%2B%20(M%20%2B%20m)%20m%20g%20l%20%5Csin%20%5Ctheta%7D%7B(M%20%2B%20m)%5Cleft(I%20%2B%20m%20l%5E2%5Cright)%20-%20m%5E2%20l%5E2%20%5Ccos%20%5Ctheta%5E2%7D)
+
 角加速度公式：
-(https://i.upmath.me/svg/%5Cddot%7B%5Ctheta%7D%3D%5Cfrac%7B-m%20l%20%5Ccos%20%5Ctheta%20b%20%5Cdot%7Bx%7D-m%5E%7B2%7D%20l%5E%7B2%7D%20%5Csin%20%5Ctheta%20%5Ccos%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%2Bm%20l%20%5Ccos%20%5Ctheta%20F%2B(M%2Bm)%20m%20g%20l%20%5Csin%20%5Ctheta%7D%7B(M%2Bm)%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)-m%5E%7B2%7D%20l%5E%7B2%7D%20%5Ccos%20%5Ctheta%5E%7B2%7D%7D)
+![角加速度公式](https://i.upmath.me/svg/%5Cddot%7B%5Ctheta%7D%3D%5Cfrac%7B-m%20l%20%5Ccos%20%5Ctheta%20b%20%5Cdot%7Bx%7D-m%5E%7B2%7D%20l%5E%7B2%7D%20%5Csin%20%5Ctheta%20%5Ccos%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%2Bm%20l%20%5Ccos%20%5Ctheta%20F%2B(M%2Bm)%20m%20g%20l%20%5Csin%20%5Ctheta%7D%7B(M%2Bm)%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)-m%5E%7B2%7D%20l%5E%7B2%7D%20%5Ccos%20%5Ctheta%5E%7B2%7D%7D)
 
 ### 方向2：顺时针角度为正
 （此处插入角加速度和加速度公式图片链接）
