--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -24,7 +24,7 @@
 
 加速度公式：
 
-![加速度公式](https://i.upmath.me/svg/%5Cddot%7B%5Ctheta%7D%20%3D%20%5Cfrac%7B-m%20l%20%5Ccos%20%5Ctheta%20b%20%5Cdot%7Bx%7D%20-%20m%5E2%20l%5E2%20%5Csin%20%5Ctheta%20%5Ccos%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E2%20%2B%20m%20l%20%5Ccos%20%5Ctheta%20F%20%2B%20(M%20%2B%20m)%20m%20g%20l%20%5Csin%20%5Ctheta%7D%7B(M%20%2B%20m)%5Cleft(I%20%2B%20m%20l%5E2%5Cright)%20-%20m%5E2%20l%5E2%20%5Ccos%20%5Ctheta%5E2%7D)
+![加速度公式](https://i.upmath.me/svg/%5Cddot%7Bx%7D%3D%5Cfrac%7B-%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20b%20%5Cdot%7Bx%7D-ml%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Csin%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%2B%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20F%2Bm%5E%7B2%7D%20l%5E%7B2%7D%20g%20%5Ccos%20%5Ctheta%20%5Csin%20%5Ctheta%7D%7B(M%2Bm)%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)-m%5E%7B2%7D%20l%5E%7B2%7D%20%5Ccos%20%5Ctheta%5E%7B2%7D%7D)
 
 角加速度公式：
 
@@ -49,7 +49,8 @@
 ### 状态空间方程
 方向 1：逆时针角度为正
 
-在平衡点 [!平衡点](https://i.upmath.me/svg/%5Ctheta_b%20%3D%200)附近线性化，有[!平衡点2](https://i.upmath.me/svg/sin(%5Ctheta_d)%3D%5Ctheta_d%2Ccos(%5Ctheta_d)%3D1)，取状态向量为[!状态向量](https:////i.upmath.me/svg/%5Cvec%20x%3D%5Bx%2C%5Cdot%20x%2C%5Ctheta%2C%5Cdot%20%5Ctheta%5D)，可得系统矩阵A和控制矩阵B为：
+在平衡点 [!平衡点](https://i.upmath.me/svg/%5Ctheta_b%20%3D%200)附近线性化，有[!平衡点2](https://i.upmath.me/svg/sin(%5Ctheta_d)%3D%5Ctheta_d%2Ccos(%5Ctheta_d)%3D1)，取状态向量为[!状态向量](https:////i.upmath.me/svg/%5Cvec%20x%3D%5Bx%2C%5Cdot%20x%2C%5Ctheta%2C%5Cdot%20%5Ctheta%5D)，
+可得系统矩阵A和控制矩阵B为：
 
 [!系统矩阵AB](https://i.upmath.me/svg/A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7Bm%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7B-mlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%2CB%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7Bml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D)
 
