--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -50,34 +50,34 @@
 方向 1：逆时针角度为正
 
 在平衡点
-[!平衡点](https://i.upmath.me/svg/%5Ctheta_b%20%3D%200)
+![平衡点](https://i.upmath.me/svg/%5Ctheta_b%20%3D%200)
 附近线性化，有
-[!平衡点2](https://i.upmath.me/svg/sin(%5Ctheta_d)%3D%5Ctheta_d%2Ccos(%5Ctheta_d)%3D1)
+![平衡点2](https://i.upmath.me/svg/sin(%5Ctheta_d)%3D%5Ctheta_d%2Ccos(%5Ctheta_d)%3D1)
 ，取状态向量为
-[!状态向量](https:////i.upmath.me/svg/%5Cvec%20x%3D%5Bx%2C%5Cdot%20x%2C%5Ctheta%2C%5Cdot%20%5Ctheta%5D)
+![状态向量](https:////i.upmath.me/svg/%5Cvec%20x%3D%5Bx%2C%5Cdot%20x%2C%5Ctheta%2C%5Cdot%20%5Ctheta%5D)
 ，可得系统矩阵A和控制矩阵B为：
 
-[!系统矩阵AB](https://i.upmath.me/svg/A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7Bm%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7B-mlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%2CB%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7Bml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D)
+![系统矩阵AB](https://i.upmath.me/svg/A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7Bm%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7B-mlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%2CB%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7Bml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D)
 
 其中，
-[!分母](https://i.upmath.me/svg/D%3D(M%2Bm)(I%2Bml%5E2)-m%5E2l%5E2)
+![分母](https://i.upmath.me/svg/D%3D(M%2Bm)(I%2Bml%5E2)-m%5E2l%5E2)
 ，由此可得系统的状态空间方程：
 
-[!状态空间方程1]
+![状态空间方程1]
 (https://i.upmath.me/svg/%5Cbegin%7Bbmatrix%7D%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Cddot%7Bx%7D%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%20%5C%5C%0A%5Cddot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7BI%2Bml%5E2b%7D%7BD%7D%20%26%20%5Cfrac%7Bm%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7B-mlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%5Cbegin%7Bbmatrix%7D%0A%7Bx%7D%20%5C%5C%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Ctheta%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%2B%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7Bml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D%0AF)
 
 方向 2：顺时针角度为正
 
 系统矩阵 A 和输入矩阵 B：
 
-[!系统矩阵AB](https://i.upmath.me/svg/A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7B-m%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7Bmlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%2CB%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7B-ml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D)
+![系统矩阵AB](https://i.upmath.me/svg/A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7B-m%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7Bmlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%2CB%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7B-ml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D)
 
 ---
 
 ## LQR位置跟踪实现
 通过修改状态向量实现目标位置跟踪：
 
-[!跟踪]((https://i.upmath.me/svg/%5Cbegin%7Bbmatrix%7D%0A%7Bx%7D-x_%7Bref%7D%20%5C%5C%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Ctheta%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D)
+![跟踪]((https://i.upmath.me/svg/%5Cbegin%7Bbmatrix%7D%0A%7Bx%7D-x_%7Bref%7D%20%5C%5C%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Ctheta%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D)
 
 代码实现如下：
 
