--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -21,6 +21,10 @@
 ### 方向1：逆时针角度为正
 通过牛顿-欧拉法或拉格朗日方程推导非线性微分方程：
 
+<div style="text-align:center;">
+  <img src="https://i.upmath.me/svg/%5Cbegin%7Baligned%7D%0A(M%2Bm)%20%5Cddot%7Bx%7D-m%20l%20%5Cddot%7B%5Ctheta%7D%20%5Ccos%20%5Ctheta%2Bm%20l%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%20%5Csin%20%5Ctheta%20%26%20%3DF%20-b%5Cdot%20x%5C%5C%0A%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Cddot%7B%5Ctheta%7D-m%20l%20%5Cddot%7Bx%7D%20%5Ccos%20%5Ctheta-m%20g%20l%20%5Csin%20%5Ctheta%20%26%20%3D0%0A%5Cend%7Baligned%7D" alt="数学模型" style="display:inline-block; margin:10px;">
+</div>
+
 ![数学模型](https://i.upmath.me/svg/%5Cbegin%7Baligned%7D%0A(M%2Bm)%20%5Cddot%7Bx%7D-m%20l%20%5Cddot%7B%5Ctheta%7D%20%5Ccos%20%5Ctheta%2Bm%20l%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%20%5Csin%20%5Ctheta%20%26%20%3DF%20-b%5Cdot%20x%5C%5C%0A%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Cddot%7B%5Ctheta%7D-m%20l%20%5Cddot%7Bx%7D%20%5Ccos%20%5Ctheta-m%20g%20l%20%5Csin%20%5Ctheta%20%26%20%3D0%0A%5Cend%7Baligned%7D)
 
 加速度公式：
