--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -18,12 +18,8 @@
 ---
 
 ## 非线性动力学方程
-### 方向1：逆时针角度为正
+#### 方向1：逆时针角度为正
 通过牛顿-欧拉法或拉格朗日方程推导非线性微分方程：
-
-<div style="text-align:center;">
-  <img src="https://i.upmath.me/svg/%5Cbegin%7Baligned%7D%0A(M%2Bm)%20%5Cddot%7Bx%7D-m%20l%20%5Cddot%7B%5Ctheta%7D%20%5Ccos%20%5Ctheta%2Bm%20l%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%20%5Csin%20%5Ctheta%20%26%20%3DF%20-b%5Cdot%20x%5C%5C%0A%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Cddot%7B%5Ctheta%7D-m%20l%20%5Cddot%7Bx%7D%20%5Ccos%20%5Ctheta-m%20g%20l%20%5Csin%20%5Ctheta%20%26%20%3D0%0A%5Cend%7Baligned%7D" alt="数学模型" style="display:inline-block; margin:10px;">
-</div>
 
 ![数学模型](https://i.upmath.me/svg/%5Cbegin%7Baligned%7D%0A(M%2Bm)%20%5Cddot%7Bx%7D-m%20l%20%5Cddot%7B%5Ctheta%7D%20%5Ccos%20%5Ctheta%2Bm%20l%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%20%5Csin%20%5Ctheta%20%26%20%3DF%20-b%5Cdot%20x%5C%5C%0A%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Cddot%7B%5Ctheta%7D-m%20l%20%5Cddot%7Bx%7D%20%5Ccos%20%5Ctheta-m%20g%20l%20%5Csin%20%5Ctheta%20%26%20%3D0%0A%5Cend%7Baligned%7D)
 
@@ -35,7 +31,7 @@
 
 ![角加速度公式](https://i.upmath.me/svg/%5Cddot%7B%5Ctheta%7D%3D%5Cfrac%7B-m%20l%20%5Ccos%20%5Ctheta%20b%20%5Cdot%7Bx%7D-m%5E%7B2%7D%20l%5E%7B2%7D%20%5Csin%20%5Ctheta%20%5Ccos%20%5Ctheta%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%2Bm%20l%20%5Ccos%20%5Ctheta%20F%2B(M%2Bm)%20m%20g%20l%20%5Csin%20%5Ctheta%7D%7B(M%2Bm)%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)-m%5E%7B2%7D%20l%5E%7B2%7D%20%5Ccos%20%5Ctheta%5E%7B2%7D%7D)
 
-### 方向2：顺时针角度为正
+#### 方向2：顺时针角度为正
 数学模型，注意和标准模型的符号差别：
 
 ![数学模型](https://i.upmath.me/svg/%5Cbegin%7Baligned%7D%0A(M%2Bm)%20%5Cddot%7Bx%7D%2Bm%20l%20%5Cddot%7B%5Ctheta%7D%20%5Ccos%20%5Ctheta-m%20l%20%5Cdot%7B%5Ctheta%7D%5E%7B2%7D%20%5Csin%20%5Ctheta%20%26%20%3DF%20-b%5Cdot%20x%5C%5C%0A%5Cleft(I%2Bm%20l%5E%7B2%7D%5Cright)%20%5Cddot%7B%5Ctheta%7D%2Bm%20l%20%5Cddot%7Bx%7D%20%5Ccos%20%5Ctheta-m%20g%20l%20%5Csin%20%5Ctheta%20%26%20%3D0%0A%5Cend%7Baligned%7D)
@@ -51,8 +47,8 @@
 ---
 
 ## 线性化模型（LQR控制）
-### 状态空间方程
-方向 1：逆时针角度为正
+
+#### 方向 1：逆时针角度为正
 
 在平衡点
 ![平衡点](https://i.upmath.me/svg/%5Ctheta_b%20%3D%200)
@@ -70,7 +66,7 @@
 
 ![状态空间方程1](https://i.upmath.me/svg/%5Cbegin%7Bbmatrix%7D%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Cddot%7Bx%7D%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%20%5C%5C%0A%5Cddot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7BI%2Bml%5E2b%7D%7BD%7D%20%26%20%5Cfrac%7Bm%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7B-mlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%5Cbegin%7Bbmatrix%7D%0A%7Bx%7D%20%5C%5C%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Ctheta%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%2B%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7Bml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D%0AF)
 
-方向 2：顺时针角度为正
+#### 方向 2：顺时针角度为正
 
 系统矩阵 A 和输入矩阵 B：
 
