--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -64,13 +64,17 @@
 ![分母](https://i.upmath.me/svg/D%3D(M%2Bm)(I%2Bml%5E2)-m%5E2l%5E2)
 ，由此可得系统的状态空间方程：
 
-![状态空间方程1](https://i.upmath.me/svg/%5Cbegin%7Bbmatrix%7D%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Cddot%7Bx%7D%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%20%5C%5C%0A%5Cddot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7BI%2Bml%5E2b%7D%7BD%7D%20%26%20%5Cfrac%7Bm%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7B-mlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%5Cbegin%7Bbmatrix%7D%0A%7Bx%7D%20%5C%5C%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Ctheta%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%2B%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7Bml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D%0AF)
+![状态空间方程1](https://i.upmath.me/svg/%5Cbegin%7Bbmatrix%7D%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Cddot%7Bx%7D%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%20%5C%5C%0A%5Cddot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7Bm%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7B-mlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%5Cbegin%7Bbmatrix%7D%0A%7Bx%7D%20%5C%5C%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Ctheta%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%2B%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7Bml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D%0AF)
 
 #### 方向 2：顺时针角度为正
 
 系统矩阵 A 和输入矩阵 B：
 
 ![系统矩阵AB](https://i.upmath.me/svg/A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7B-m%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7Bmlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%2CB%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7B-ml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D)
+
+状态空间方程为：
+
+![状态空间方程2](https://i.upmath.me/svg/%5Cbegin%7Bbmatrix%7D%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Cddot%7Bx%7D%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%20%5C%5C%0A%5Cddot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%3D%0A%5Cbegin%7Bbmatrix%7D%0A0%20%26%201%20%26%200%20%26%200%20%5C%5C%0A0%20%26%20%5Cfrac%7B-(I%2Bml%5E2)b%7D%7BD%7D%20%26%20%5Cfrac%7B-m%5E2l%5E2g%7D%7BD%7D%20%26%200%20%5C%5C%0A0%20%26%200%20%26%200%20%26%201%20%5C%5C%0A0%20%26%20%5Cfrac%7Bmlb%7D%7BD%7D%20%26%20%5Cfrac%7B(M%2Bm)mgl%7D%7BD%7D%20%26%200%0A%5Cend%7Bbmatrix%7D%0A%5Cbegin%7Bbmatrix%7D%0A%7Bx%7D%20%5C%5C%0A%5Cdot%7Bx%7D%20%5C%5C%0A%5Ctheta%20%5C%5C%0A%5Cdot%7B%5Ctheta%7D%0A%5Cend%7Bbmatrix%7D%0A%2B%0A%5Cbegin%7Bbmatrix%7D%0A0%20%5C%5C%0A%5Cfrac%7BI%2Bml%5E2%7D%7BD%7D%20%5C%5C%0A0%20%5C%5C%0A%5Cfrac%7B-ml%7D%7BD%7D%0A%5Cend%7Bbmatrix%7D%0AF)
 
 ---
 
