--- a/一阶倒立摆.md
+++ b/一阶倒立摆.md
@@ -8,7 +8,7 @@
 | 摆杆角度        | θ         | 逆时针方向为正            |
 | 小车位移        | x         | 向右为正方向              |
 | 外力输入        | F         | 作用于小车的控制力        |
-| 地面摩擦系数    | b         |                          |
+| 地面摩擦系数    | B         |                          |
 
 ## 模型示意图
 ![carpole_model](./images/carpole_model.png)  
